# coffee-master

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  benchmark.py  main.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml
backend/: chat_service.py  config.py  main.py  model_manager.py  schemas.py
backend/routes/: chat.py
e2e/: README.md
e2e/tests/: about.spec.ts  api.spec.ts  blog.spec.ts  chat-e2e.spec.ts  homepage.spec.ts  navigation.spec.ts
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/blog/: page.tsx
frontend/app/blog/[slug]/: page.tsx
frontend/components/: ChatInterface.tsx  Footer.tsx  Navbar.tsx  ProjectCard.tsx  QuickPrompts.tsx
frontend/content/blog/: first-post.md
frontend/lib/: blog.ts
sh/: runserver.ps1
tests/: conftest.py  test_concurrency.py
